--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html, body {
     background-color: rgb(230, 230, 230) !important;
 }
 .navbar {
-    background-color: rgb(20, 31, 180);
+    background-color: #318CE7;
     box-shadow: 0px 0px 55px rgb(55, 55, 55);
 }
 
@@ -39,7 +39,7 @@ html, body {
 .vr {
     height: 10em;
     width: 0.25em !important;
-    color: white;
+    color: #318CE7;
 }
 
 @keyframes scroll {
