--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,56 +13,91 @@ html, body {
 }
 
 #home {
-    height: 100vh;
+    min-height: 100vh;
 }
 #about {
-    height: 100vh;
+    min-height: 100vh;
     background-color:rgb(35, 35, 35);
     padding-top: 70px;
+    padding-bottom: 4rem;
 }
 #competence {
-    height: 100vh;
-    /* background-color: aquamarine; */
+    min-height: 100vh;
 }
 #realisation {
-    height: 100vh;
-    /* background-color: aqua; */
+    min-height: 100vh;
 }
 
 #contact {
-    height: 100vh;
-    /* background-color: rgb(172, 172, 172); */
+    min-height: 100vh;
 }
 #home, #about, #competence, #realisation, #contact {
     padding-top: 90px;
 }
 .vr {
-    height: 10em;
+    height: 6em;
     width: 0.25em !important;
     color: #318CE7;
 }
+h1 {
+    text-shadow: rgba(40, 40, 40, 0.85) 1px 0 10px;
+}
+.shadow-xl {
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.8)
+}
+.img-size{
+    width: 50%;
+}
+/* ANIMATION TITRE */
+.fade-in {
+    opacity: 0;
+    transition: opacity 3s ease-in-out;
+}
+.fade-in.show {
+    opacity: 1;
+}
+/* ANIMATION PHOTO */
+.slide-in {
+    opacity: 0; /* Initialise l'opacité à 0 */
+    transform: translateY(50px); /* Décale l'image de 50px vers le bas */
+    transition: opacity 0.7s ease, transform 2s ease; /* Ajoute une transition d'opacité et de transformation */
+}
 
-@keyframes scroll {
+.slide-in.show {
+    opacity: 1; /* Lorsque la classe "show" est ajoutée, l'opacité devient 1 */
+    transform: translateY(0); /* Réinitialise la transformation à sa position d'origine */
+}
+
+/* MEDIA QUERY */
+@media (max-width: 1024px) {
+    .img-size {
+        width: 100%;
+    }
+
+    .mobile {
+        padding-inline: 0.3rem !important;
+    }
+}
+
+
+
+/* @keyframes scroll {
     0% { transform: translateX(60%); }
     100% { transform: translateX(-100%); }
 }
-
 .scrolling-container {
     width: 100%;
     overflow: hidden;
 }
-
 .scrolling-text {
     white-space: nowrap;
     display: inline-block;
-    animation: scroll 15s linear infinite; /* Ajustez la durée en conséquence */
+    animation: scroll 10s linear infinite; 
 }
-
 .scrolling-text span {
     display: inline-block;
-    padding-right: 40px; /* Espace entre les mots */
+    padding-right: 40px; 
 }
-
 .scrolling-text span:last-child {
-    margin-right: 0px; /* Compense l'espace à la fin pour l'effet infini */
-}
+    margin-right: 0;
+} */
