--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,9 +8,9 @@ html, body {
     background-color: rgb(230, 230, 230) !important;
 }
 .navbar {
-    /* background-color: #318CE7; */
-    background: rgb(248,249,250);
-    background: linear-gradient(180deg, rgba(248,249,250,1) 0%, rgba(49,140,231,1) 80%);
+    background-color: #318CE7;
+    /* background: rgb(248,249,250);
+    background: linear-gradient(180deg, rgba(248,249,250,1) 0%, rgba(49,140,231,1) 80%); */
     box-shadow: 0px 0px 55px rgb(55, 55, 55);
 }
 
