--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,16 @@
 * {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-
+.bordeau {
+    background-color: #690000;
+}
 html, body {
     max-width: 100%;
     overflow-x : hidden !important;
     background-color: rgb(230, 230, 230) !important;
 }
 .navbar {
-    background-color: #318CE7;
+    background-color: #690000;
     /* background: rgb(248,249,250);
     background: linear-gradient(180deg, rgba(248,249,250,1) 0%, rgba(49,140,231,1) 80%); */
     box-shadow: 0px 0px 55px rgb(55, 55, 55);
@@ -39,7 +41,7 @@ html, body {
 .vr {
     height: 6em;
     width: 0.25em !important;
-    color: #318CE7;
+    color: #690000;
 }
 h1 {
     text-shadow: rgba(40, 40, 40, 0.85) 1px 0 10px;
