--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,13 @@
 * {
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-.bordeau {
-    background-color: #690000;
-}
 html, body {
     max-width: 100%;
     overflow-x : hidden !important;
     background-color: rgb(230, 230, 230) !important;
 }
 .navbar {
-    background-color: #690000;
+    background-color: #7f0000;
     /* background: rgb(248,249,250);
     background: linear-gradient(180deg, rgba(248,249,250,1) 0%, rgba(49,140,231,1) 80%); */
     box-shadow: 0px 0px 55px rgb(55, 55, 55);
@@ -51,6 +48,13 @@ h1 {
 }
 .img-size{
     width: 50%;
+}
+.btn-bordeau {
+    background-color: #a81919;
+}
+.btn:hover{
+    background-color: white !important;
+    color: #a81919 !important;
 }
 /* ANIMATION TITRE */
 .fade-in {
