--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,9 @@ html, body {
     background: linear-gradient(180deg, rgba(248,249,250,1) 0%, rgba(49,140,231,1) 80%); */
     box-shadow: 0px 0px 55px rgb(55, 55, 55);
 }
-
+.text-light-emphasis {
+    color: #a3a3a3 !important;
+}
 #home {
     min-height: 100vh;
 }
@@ -48,6 +50,7 @@ h1 {
 }
 .img-size{
     width: 50%;
+    height: 100%;
 }
 .btn-bordeau {
     background-color: #a81919;
@@ -84,6 +87,11 @@ h1 {
 
     .mobile {
         padding-inline: 0.3rem !important;
+    }
+}
+@media (max-width: 550px) {
+    h1 {
+        font-size: 80px !important;
     }
 }
 
