--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,9 +25,10 @@ html, body {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("../img/IMG_3870.JPG");
+    width: 110%;
+    height: 110%;
+    left: -5%;
+    background-image: url("../img/placo5.jpeg");
     background-size: cover;
     filter: blur(7px); /* Flou de l'image de fond */
     z-index: -1;
@@ -60,7 +61,7 @@ html, body {
 .vr {
     height: 6em;
     width: 0.25em !important;
-    color: #690000;
+    color: #ff0000;
 }
 h1 {
     text-shadow: rgba(40, 40, 40, 0.85) 7px 7px 20px;
